my-apps/arr-stack/overseerr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: overseerr
  namespace: overseerr
  labels:
    app: overseerr
  annotations:
    ignore-check.kube-linter.io/run-as-non-root: "Application requires root for PUID/PGID mapping at startup"
    ignore-check.kube-linter.io/no-read-only-root-fs: "Legacy application requires writeable root for internal updates/logging"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: overseerr
  template:
    metadata:
      labels:
        app: overseerr
      annotations:
        backup.velero.io/backup-volumes-excludes: appdata
    spec:
      containers:
        - name: overseerr
          image: lscr.io/linuxserver/overseerr:1.35.0
          imagePullPolicy: Always
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "1Gi"
              cpu: "500m"
          ports:
            - containerPort: 7878
          volumeMounts:
            - name: appdata
              mountPath: /config
              subPath: appdata/linuxserver-overseerr-2/config
      volumes:
        - name: appdata
          persistentVolumeClaim:
            claimName: pvc-appdata
